# knowledge-indexer

./: .env.example  .gitignore  README.md  SOLO挑战赛参赛帖.md  demo.html  pyproject.toml
src/knowledge_indexer/: __init__.py  cli.py  config.py  feishu.py  indexer.py  llm.py  models.py  scheduler.py  search.py
